--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,10 +13,10 @@ main:
     url: /research/
 
   - title: "Resume (Eng.)"
-    url: /files/avng_resume.pdf/    
+    url: /files/avng_resume.pdf    
     
   - title: "CV (Eng.)"
-    url: /files/avng_cv_en.pdf/
+    url: /files/avng_cv_en.pdf
 
   - title: "CV (Fr.)"
-    url: /files/avng_cv_fr.pdf/
+    url: /files/avng_cv_fr.pdf
