--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : #
   employer         : "MIT NSE"
   uri              : # URL
-  email            : "avng@mit.edu" 
+  email            : # 
 
   # Academic websites
   academia         : # URL
