--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /research/
 
   - title: "Resume (Eng.)"
-    url: /files/avng_resume.pdf    
+    url: /files/avng_resume_0725.pdf    
     
   - title: "CV (Eng.)"
     url: /files/avng_cv_en.pdf
